Add support for /api/v2/instance