@@ -1,7 +1,5 @@
 package org.joinmastodon.android.model;
 
-import android.text.Html;
-
 import org.joinmastodon.android.api.ObjectValidationException;
 import org.joinmastodon.android.api.RequiredField;
 import org.joinmastodon.android.model.catalog.CatalogInstance;
@@ -10,15 +8,8 @@ import org.parceler.Parcel;
 import java.net.IDN;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
-@Parcel
-public class Instance extends BaseModel{
-	/**
-	 * The domain name of the instance.
-	 */
-	@RequiredField
-	public String uri;
+public abstract class Instance extends BaseModel{
 	/**
 	 * The title of the website.
 	 */
@@ -30,16 +21,6 @@ public class Instance extends BaseModel{
 	@RequiredField
 	public String description;
 	/**
-	 * A shorter description defined by the admin.
-	 */
-//	@RequiredField
-	public String shortDescription;
-	/**
-	 * An email that may be contacted for any inquiries.
-	 */
-	@RequiredField
-	public String email;
-	/**
 	 * The version of Mastodon installed on the instance.
 	 */
 	@RequiredField
@@ -49,32 +30,7 @@ public class Instance extends BaseModel{
 	 */
 //	@RequiredField
 	public List<String> languages;
-	/**
-	 * Whether registrations are enabled.
-	 */
-	public boolean registrations;
-	/**
-	 * Whether registrations require moderator approval.
-	 */
-	public boolean approvalRequired;
-	/**
-	 * Whether invites are enabled.
-	 */
-	public boolean invitesEnabled;
-	/**
-	 * URLs of interest for clients apps.
-	 */
-	public Map<String, String> urls;
 
-	/**
-	 * Banner image for the website.
-	 */
-	public String thumbnail;
-	/**
-	 * A user that can be contacted, as an alternative to email.
-	 */
-	public Account contactAccount;
-	public Stats stats;
 
 	public List<Rule> rules;
 	public Configuration configuration;
@@ -85,50 +41,37 @@ public class Instance extends BaseModel{
 	@Override
 	public void postprocess() throws ObjectValidationException{
 		super.postprocess();
-		if(contactAccount!=null)
-			contactAccount.postprocess();
 		if(rules==null)
 			rules=Collections.emptyList();
-		if(shortDescription==null)
-			shortDescription="";
-	}
-
-	@Override
-	public String toString(){
-		return "Instance{"+
-				"uri='"+uri+'\''+
-				", title='"+title+'\''+
-				", description='"+description+'\''+
-				", shortDescription='"+shortDescription+'\''+
-				", email='"+email+'\''+
-				", version='"+version+'\''+
-				", languages="+languages+
-				", registrations="+registrations+
-				", approvalRequired="+approvalRequired+
-				", invitesEnabled="+invitesEnabled+
-				", urls="+urls+
-				", thumbnail='"+thumbnail+'\''+
-				", contactAccount="+contactAccount+
-				'}';
 	}
 
 	public CatalogInstance toCatalogInstance(){
 		CatalogInstance ci=new CatalogInstance();
-		ci.domain=uri;
-		ci.normalizedDomain=IDN.toUnicode(uri);
-		ci.description=Html.fromHtml(shortDescription).toString().trim();
-		if(languages!=null&&languages.size()>0){
+		ci.domain=getDomain();
+		ci.normalizedDomain=IDN.toUnicode(getDomain());
+		ci.description=description.trim();
+		if(languages!=null && !languages.isEmpty()){
 			ci.language=languages.get(0);
 			ci.languages=languages;
 		}else{
-			ci.languages=Collections.emptyList();
+			ci.languages=List.of();
 			ci.language="unknown";
 		}
-		ci.proxiedThumbnail=thumbnail;
-		if(stats!=null)
-			ci.totalUsers=stats.userCount;
+		ci.proxiedThumbnail=getThumbnailURL();
+//		if(stats!=null)
+//			ci.totalUsers=stats.userCount;
 		return ci;
 	}
+
+	public abstract String getDomain();
+	public abstract Account getContactAccount();
+	public abstract String getContactEmail();
+	public abstract boolean areRegistrationsOpen();
+	public abstract boolean isApprovalRequired();
+	public abstract boolean areInvitesEnabled();
+	public abstract String getThumbnailURL();
+	public abstract int getVersion();
+	public abstract long getApiVersion(String name);
 
 	@Parcel
 	public static class Rule{
@@ -136,13 +79,6 @@ public class Instance extends BaseModel{
 		public String text;
 
 		public transient CharSequence parsedText;
-	}
-
-	@Parcel
-	public static class Stats{
-		public int userCount;
-		public int statusCount;
-		public int domainCount;
 	}
 
 	@Parcel
